--- a/client/package.json
+++ b/client/package.json
@@ -22,10 +22,13 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
@@ -33,6 +36,7 @@
     "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
